# M7

./: .gitignore  CMakeLists.txt  README.md
assets/: CMakeLists.txt  integral_indexing_test.py
assets/4e8o_relativistic/: FCIDUMP  fci.json  fci.out  ints.json  ints.out
assets/DHF_Be_STO-3G/: FCIDUMP  fci.json  fci.out  ints.json  ints.out
assets/H2O_RHF/: FCIDUMP  pyscf.out
assets/H2O_X2C/: FCIDUMP  main.out
assets/HF_DIRAC_4fold/: FCIDUMP  tut_HF.out
assets/HF_RDMs/: FCIDUMP  exact_rdms.pkl  fock.h5  fock_diag.h5  rdm.out  rdm.py
assets/HH_ZPM/: BOSDUMP  EBDUMP  EBDUMP_ZPM  FCIDUMP  FCIDUMP_ZPM
assets/Hubbard_4_4/: FCIDUMP
assets/Hubbard_8_8/: CMakeLists.txt  FCIDUMP
assets/Hubbard_U4_14site/: FCIDUMP
assets/Hubbard_U4_14site_pbc/: FCIDUMP
assets/Hubbard_U4_3site/: BOSDUMP_GENERAL  BOSDUMP_HH_W0.3  BOSDUMP_NULL  EBDUMP_GENERAL  EBDUMP_HH_V1.4  EBDUMP_HH_V1.4_WITH_UNC  EBDUMP_HOPPING  EBDUMP_NULL  FCIDUMP  ebfci_hopping_nboson_max_1.out  ebfci_kinetic_nboson_max_2.out  ebfci_kinetic_nboson_max_3.out  ebfci_nboson_max_1.out  ebfci_nboson_max_2.out  ebfci_nboson_max_3.out
assets/Hubbard_U4_4site/: BOSDUMP  EBDUMP  FCIDUMP  ebfci.out
assets/Hubbard_U4_6site/: FCIDUMP
assets/Hubbard_U4_6site_pbc/: FCIDUMP
assets/Hubbard_U4_8site/: FCIDUMP
assets/LandauLevels/: BOSDUMP
assets/LandauLevels_5_5_15/: exact.out
assets/LandauLevels_6_8_14/: BOSDUMP  exact.out
assets/LiH_RDMs/: FCIDUMP  exact_rdms.pkl  rdm.out  rdm.py
assets/N2_Molcas/: f_act.h5  molcas.FciDmp.h5
assets/N_UHF/: FCIDUMP.spin_blocks  FCIDUMP.spin_major  FCIDUMP.spin_minor  uhf.out  uhf.py
assets/O2_Molcas/: FCIDUMP
assets/RHF_Cr2_12o12e/: FCIDUMP  pyscf.out
assets/RHF_H2_STO-3G/: FCIDUMP  fci.out
assets/RHF_LiH_STO-3G/: FCIDUMP  fci.out
assets/RHF_N2_6o6e/: FCIDUMP  neci.out  pyscf.out
assets/RHF_N2_CCPVDZ/: FCIDUMP
assets/ROHF_Cr2_12o12e/: FCIDUMP
assets/SpinResolvedEbdump/: EBDUMP
assets/TC_Be_6-31G/: BOSDUMP  FCIDUMP  TCDUMP  input.molden  parameters.casl
assets/TC_Be_CCPVDZ/: CMakeLists.txt  FCIDUMP  be.casl  input.molden
assets/parity_test/: CMakeLists.txt  main.py  parity_8.txt
assets/yaml_test/: CMakeLists.txt  example.yaml
src/: CMakeLists.txt  consts.h  defs.h  main.cpp  utils.h
src/M7_lib/: CMakeLists.txt  defs.h
src/core/: CMakeLists.txt  defs.h
src/data/: BitField.cpp  BitField.h  BitString.cpp  BitString.h  BitfieldHasher.cpp  BitfieldHasher.h  BitfieldNew.cpp  BitfieldNew.h  CommunicationBuffer.cpp  CommunicationBuffer.h  DataTable.cpp  DataTable.h  Determinant.cpp  Determinant.h  DeterminantHasher.cpp  DeterminantHasher.h  Field.cpp  Field.h  FieldBase.cpp  FieldBase.h  FieldSet.cpp  FieldSet.h  HashMap.cpp  HashMap.h  List.cpp  List.h  ListKeyMap.h  ListNew.cpp  ListNew.h  MappedDataTable.cpp  MappedDataTable.h  MappedList.cpp  MappedList.h  MappedListNew.cpp  MappedListNew.h  MappedTable.cpp  MappedTable.h  MutexVector.cpp  MutexVector.h  NumericView.cpp  (+23 more)
src/datasystems/: DataSystem.cpp  DataSystem.h  FciqmcCalculation.cpp  FciqmcCalculation.h  ReducedDensityMatrix.cpp  ReducedDensityMatrix.h  StochasticWavefunction.cpp  StochasticWavefunction.h  Wavefunction.cpp  Wavefunction.h
src/dynamics/: DeterministicPropagator.cpp  DeterministicPropagator.h  ExactPropagator.cpp  ExactPropagator.h  FciqmcCalculation.cpp  FciqmcCalculation.h  Propagator.cpp  Propagator.h  RankAllocator.h  SemistochasticPropagator.cpp  SemistochasticPropagator.h  SpawnList.cpp  SpawnList.h  StochasticPropagator.cpp  StochasticPropagator.h  WalkerCommunicator.cpp  WalkerCommunicator.h  WalkerList.cpp  WalkerList.h  Wavefunction.cpp  Wavefunction.h
src/enumerators/: BitfieldEnumerator.h  CombinationEnumerator.cpp  CombinationEnumerator.h  Enumerator.h  VectorCombinationEnumerator.cpp  VectorCombinationEnumerator.h
src/fermion/: Determinant.cpp  Determinant.h  DeterminantConnection.cpp  DeterminantConnection.h  Excitation.cpp  Excitation.h
src/hamiltonian/: AbInitioHamiltonian.cpp  AbInitioHamiltonian.h  Hamiltonian.cpp  Hamiltonian.h
src/hash/: BitfieldHasher.cpp  BitfieldHasher.h  DeterminantHasher.cpp  DeterminantHasher.h  HashMap.h  HashTable.h  SafeHashMap.cpp  SafeHashMap.h
src/heatbath/: DeterminantSampler.cpp  DeterminantSampler.h  HeatBathExcitation.h  HeatBathSampler.cpp  HeatBathSampler.h
src/integrals/: AbInitioHamiltonian.cpp  AbInitioHamiltonian.h  Integrals.h  Integrals_1e.cpp  Integrals_1e.h  Integrals_2e.cpp  Integrals_2e.h
src/io/: FcidumpFileIterator.h  FciqmcStatsFile.cpp  FciqmcStatsFile.h  FileIterator.cpp  FileIterator.h  InputOptions.cpp  InputOptions.h  Logging.h  StatsFile.cpp  StatsFile.h  TensorFileIterator.cpp  TensorFileIterator.h
src/linalg/: DenseHamiltonian.cpp  DenseHamiltonian.h  Matrix.cpp  Matrix.h
src/maps/: Indexer.cpp  Indexer.h  VariadicIndexer.cpp  VariadicIndexer.h
src/multidim/: Indexer.h  NdArray.cpp  NdArray.h
src/parallel/: MPIWrapper.cpp  MPIWrapper.h
src/propagator/: DeterministicPropagator.cpp  DeterministicPropagator.h  HeatBathSampler.cpp  HeatBathSampler.h  Propagator.cpp  Propagator.h
src/rdm/: FermionPromoter.cpp
src/sample/: Aliaser.cpp  Aliaser.h  HeatBathSampler.cpp  HeatBathSampler.h  PRNG.h
test/: CMakeLists.txt  test.cpp  utils.cpp
test/core/: CMakeLists.txt
test/data/: Bitfield.cpp  DataTable.cpp  FieldSet.cpp  HashMap.cpp  List.cpp  MappedList.cpp  MappedTable.cpp  PerforableMappedList.cpp  PerforableMappedTable.cpp  SafeHashMap.cpp  Table.cpp  TableArray.cpp  TableCommunicator.cpp
test/datasystems/: FciqmcCalculation.cpp  StochasticWavefunction.cpp
test/dynamics/: FciqmcCalculation.cpp
test/enumerators/: ClearedBitEnumerator.cpp  CombinationEnumerator.cpp  CommonBitEnumerator.cpp  SetBitEnumerator.cpp  VectorCombinationEmunerator.cpp
test/fermion/: Determinant.cpp  DeterminantConnection.cpp
test/hamiltonian/: AbInitioHamiltonian.cpp
test/hash/: HashMap.cpp  HashTable.cpp  SafeHashMap.cpp
test/heatbath/: HeatBathSampler.cpp
test/integrals/: AbInitioHamiltonian.cpp  Integrals_1e.cpp  Integrals_2e.cpp
test/io/: StatsFile.cpp
test/multidim/: Indexer.cpp  (+3 more)
(+3476 files in other folders)
