cmake_minimum_required(VERSION 3.17)
project(M7 CXX C)
cmake_policy(SET CMP0074 NEW)
cmake_policy(SET CMP0076 NEW)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if (APPLE)
    set(CMAKE_MACOSX_RPATH 1)
endif ()

include(ExternalProject)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

add_subdirectory(src)
add_subdirectory(test)
add_subdirectory(assets)
option(TCHINT_ROOT "")
if(TCHINT_ROOT)
    message(STATUS "Compiling with TCHInt support")
    target_compile_definitions(M7_lib PUBLIC ENABLE_TCHINT)
    target_include_directories(M7_lib PUBLIC ${TCHINT_ROOT}/src/include)
    target_link_directories(M7_lib PUBLIC ${TCHINT_ROOT}/src)
    target_link_libraries(M7_lib -ltchint)
endif()

try_compile(ENABLE_X86 ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/cmake/detect_x86.cpp)
message("X86 header detected: " ${ENABLE_X86})
if (ENABLE_X86)
    target_compile_definitions(M7_lib PUBLIC ENABLE_X86)
endif()

try_compile(ENABLE_ARM ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/cmake/detect_arm.cpp)
message("ARM Neon header detected: " ${ENABLE_ARM})
if (ENABLE_ARM)
    target_compile_definitions(M7_lib PUBLIC ENABLE_ARM)
endif()
