
add_subdirectory(DHF_Be_STO-3G)
add_subdirectory(RHF_N2_6o6e)
add_subdirectory(RHF_N2_CCPVDZ)
add_subdirectory(RHF_N2_CCPVTZ)
add_subdirectory(RHF_LiH_STO-3G)
add_subdirectory(RHF_H2_STO-3G)
add_subdirectory(4e8o_relativistic)
add_subdirectory(RHF_Cr2_12o12e)
add_subdirectory(parity_test)
add_subdirectory(HF_DIRAC_4fold)
add_subdirectory(TC_Be_CCPVDZ)
