add_subdirectory(arnoldi)
add_subdirectory(basis)
add_subdirectory(bilinear)
add_subdirectory(caches)
add_subdirectory(config)
add_subdirectory(connection)
add_subdirectory(dynamics)
add_subdirectory(enumerator)
add_subdirectory(excitgen2)
add_subdirectory(field)
add_subdirectory(foreach)
add_subdirectory(hamiltonian)
add_subdirectory(hash)
add_subdirectory(integrals)
add_subdirectory(io)
add_subdirectory(linalg)
add_subdirectory(multidim)
add_subdirectory(nd)
add_subdirectory(observables)
add_subdirectory(parallel)
add_subdirectory(sample)
add_subdirectory(sort)
add_subdirectory(sparse)
add_subdirectory(subspace)
add_subdirectory(table)
add_subdirectory(util)
add_subdirectory(wavefunction)
